--- a/tex/p123.tex
+++ b/tex/p123.tex
@@ -46,7 +46,7 @@
 \vs p123 4:1 This was, indeed, an eventful year in Jesus’ life. Early in January a great snowstorm occurred in Galilee. Snow fell 60\,cm deep, the heaviest snowfall Jesus saw during his lifetime and one of the deepest at Nazareth in 100 years.
 \vs p123 4:2 The play life of Jewish children in the times of Jesus was rather circumscribed; all too often the children played at the more serious things they observed their elders doing. They played much at weddings and funerals, ceremonies which they so frequently saw and which were so spectacular. They danced and sang but had few organized games, such as children of later days so much enjoy.
 \vs p123 4:3 Jesus, in company with a neighbour boy and later his brother James, delighted to play in the far corner of the family carpenter shop, where they had great fun with the shavings and the blocks of wood. It was always difficult for Jesus to comprehend the harm of certain sorts of play which were forbidden on the Sabbath, but he never failed to conform to his parents’ wishes. He had a capacity for humour and play which was afforded little opportunity for expression in the environment of his day and generation, but up to the age of 14 he was cheerful and light\hyp{}hearted most of the time.
-\vs p123 4:4 Mary maintained a dovecote on top of the animal house adjoining the home, and they used the profits from the sale of doves as a special charity fund, which Jesus administered after he deducted the tithe and turned it over to the officer of the synagogue.
+\vs p123 4:4 Mary maintained a dovecote on top of the animal house adjoining the home, and they used the profits from the sale of doves as a special charity fund, which Jesus administered after he deducted the tithe and turned it over to the officer of the synagogue.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Jesus-Fall.png}\caption{Jesus falling down the steps by Slawa~Radziszewska}\end{figure}}
 \vs p123 4:5 \pc The only real accident Jesus had up to this time was a fall down the back\hyp{}yard stone stairs which led up to the canvas\hyp{}roofed bedroom. It happened during an unexpected July sandstorm from the east. The hot winds, carrying blasts of fine sand, usually blew during the rainy season, especially in March and April. It was extraordinary to have such a storm in July. When the storm came up, Jesus was on the housetop playing, as was his habit, for during much of the dry season this was his accustomed playroom. He was blinded by the sand when descending the stairs and fell. After this accident Joseph built a balustrade up both sides of the stairway.
 \vs p123 4:6 There was no way in which this accident could have been prevented. It was not chargeable to neglect by the midway temporal guardians, one primary and one secondary midwayer having been assigned to the watchcare of the lad; neither was it chargeable to the guardian seraphim. It simply could not have been avoided. But this slight accident, occurring while Joseph was absent in Endor, caused such great anxiety to develop in Mary’s mind that she unwisely tried to keep Jesus very close to her side for some months.
 \vs p123 4:7 Material accidents, commonplace occurrences of a physical nature, are not arbitrarily interfered with by celestial personalities. Under ordinary circumstances only midway creatures can intervene in material conditions to safeguard the persons of men and women of destiny, and even in special situations these beings can so act only in obedience to the specific mandates of their superiors.
@@ -63,7 +63,7 @@
 \vs p123 5:8 Jesus received his moral training and spiritual culture chiefly in his own home. He secured much of his intellectual and theological education from the chazan. But his real education --- that equipment of mind and heart for the actual test of grappling with the difficult problems of life --- he obtained by mingling with his fellow men. It was this close association with his fellow men, young and old, Jew and gentile, that afforded him the opportunity to know the human race. Jesus was highly educated in that he thoroughly understood men and devotedly loved them.
 \vs p123 5:9 \pc Throughout his years at the synagogue he was a brilliant student, possessing a great advantage since he was conversant with three languages. The Nazareth chazan, on the occasion of Jesus’ finishing the course in his school, remarked to Joseph that he feared he “had learned more from Jesus’ searching questions” than he had “been able to teach the lad.”
 \vs p123 5:10 Throughout his course of study Jesus learned much and derived great inspiration from the regular Sabbath sermons in the synagogue. It was customary to ask distinguished visitors, stopping over the Sabbath in Nazareth, to address the synagogue. As Jesus grew up, he heard many great thinkers of the entire Jewish world expound their views, and many also who were hardly orthodox Jews since the synagogue of Nazareth was an advanced and liberal centre of Hebrew thought and culture.
-\vs p123 5:11 When entering school at seven years (at this time the Jews had just inaugurated a compulsory education law), it was customary for the pupils to choose their “birthday text,” a sort of golden rule to guide them throughout their studies, one upon which they often expatiated at their graduation when 13 years old. The text which Jesus chose was from the Prophet Isaiah: “The spirit of the Lord God is upon me, for the Lord has anointed me; he has sent me to bring good news to the meek, to bind up the brokenhearted, to proclaim liberty to the captives, and to set the spiritual prisoners free.”
+\vs p123 5:11 When entering school at seven years (at this time the Jews had just inaugurated a compulsory education law), it was customary for the pupils to choose their “birthday text,” a sort of golden rule to guide them throughout their studies, one upon which they often expatiated at their graduation when 13 years old. The text which Jesus chose was from the Prophet Isaiah: “The spirit of the Lord God is upon me, for the Lord has anointed me; he has sent me to bring good news to the meek, to bind up the brokenhearted, to proclaim liberty to the captives, and to set the spiritual prisoners free.”\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Jesus-with-Joseph.jpg}\caption{Young Jesus with Joseph by Michael~Malm}\end{figure}}
 \vs p123 5:12 \pc Nazareth was one of the 24 priest centres of the Hebrew nation. But the Galilean priesthood was more liberal in the interpretation of the traditional laws than were the Judean scribes and rabbis. And at Nazareth they were also more liberal regarding the observance of the Sabbath. It was therefore the custom for Joseph to take Jesus out for walks on Sabbath afternoons, one of their favourite jaunts being to climb the high hill near their home, from which they could obtain a panoramic view of all Galilee. To the north\hyp{}west, on clear days, they could see the long ridge of Mount Carmel running down to the sea; and many times Jesus heard his father relate the story of Elijah, one of the first of that long line of Hebrew prophets, who reproved Ahab and exposed the priests of Baal. To the north Mount Hermon raised its snowy peak in majestic splendour and monopolized the skyline, almost 900\,m of the upper slopes glistening white with perpetual snow. Far to the east they could discern the Jordan valley and, far beyond, the rocky hills of Moab. Also to the south and the east, when the sun shone upon their marble walls, they could see the Gr\ae co\hyp{}Roman cities of the Decapolis, with their amphitheatres and pretentious temples. And when they lingered toward the going down of the sun, to the west they could make out the sailing vessels on the distant Mediterranean.\fnc{ \bibexpl{Informational: first printing; Far to the east they could discern the Jordan valley and, far beyond, the rocky hills of Moab. Also to the south and the east\ldots{} --- Punctuation and wording changes were rejected by the committee. The context for this sentence is the “panoramic view” from atop the Nazareth hill: Jesus and his father are standing on top of the hill and are moving their gaze from Mt. Carmel in the north\hyp{}west around an arc to the north, east, south and west. Mt. Hermon is to their north, and from springs in its foothills near Dan (north\hyp{}east of Nazareth) the Jordan valley extends to the Dead Sea in the south. Thus, as Jesus and Joseph follow the line of the river valley along the arc of their survey, as the Jordan approaches the Dead Sea, father and son “discern\ldots{}far beyond, the rocky hills of Moab.” This interpretation is further supported by the punctuation of the following sentence which does not read “Also, to the south and the east,\ldots{}” (suggesting a change in direction from the last reference), but rather, “Also to the south and the east,\ldots{}” which implies that the last referenced location (Moab) was in the same direction.}}
 \vs p123 5:13 From four directions Jesus could observe the caravan trains as they wended their way in and out of Nazareth, and to the south he could overlook the broad and fertile plain country of Esdraelon, stretching off toward Mount Gilboa and Samaria.
 \vs p123 5:14 When they did not climb the heights to view the distant landscape, they strolled through the countryside and studied nature in her various moods in accordance with the seasons. Jesus’ earliest training, aside from that of the home hearth, had to do with a reverent and sympathetic contact with nature.
