--- a/tex/p124.tex
+++ b/tex/p124.tex
@@ -4,7 +4,7 @@
 \usection{1.\bibnobreakspace Jesus’ Ninth Year (A.D.\,3)}
 \vs p124 1:1 Though it could hardly be said that Jesus was ever seriously ill, he did have some of the minor ailments of childhood this year, along with his brothers and baby sister.
 \vs p124 1:2 School went on and he was still a favoured pupil, having one week each month at liberty, and he continued to divide his time about equally between trips to neighbouring cities with his father, sojourns on his uncle’s farm south of Nazareth, and fishing excursions out from Magdala.
-\vs p124 1:3 \pc The most serious trouble as yet to come up at school occurred in late winter when Jesus dared to challenge the chazan regarding the teaching that all images, pictures, and drawings were idolatrous in nature. Jesus delighted in drawing landscapes as well as in modelling a great variety of objects in potter’s clay. Everything of that sort was strictly forbidden by Jewish law, but up to this time he had managed to disarm his parents’ objection to such an extent that they had permitted him to continue in these activities.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/The-Drawing-on-the-Schoolroom-Floor.jpg}\caption{The Drawing on the Schoolroom Floor by Slawa Radziszewska}\end{figure}}
+\vs p124 1:3 \pc The most serious trouble as yet to come up at school occurred in late winter when Jesus dared to challenge the chazan regarding the teaching that all images, pictures, and drawings were idolatrous in nature. Jesus delighted in drawing landscapes as well as in modelling a great variety of objects in potter’s clay. Everything of that sort was strictly forbidden by Jewish law, but up to this time he had managed to disarm his parents’ objection to such an extent that they had permitted him to continue in these activities.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/The-Drawing-on-the-Schoolroom-Floor.jpg}\caption{The Drawing on the Schoolroom Floor by Slawa~Radziszewska}\end{figure}}
 \vs p124 1:4 But trouble was again stirred up at school when one of the more backward pupils discovered Jesus drawing a charcoal picture of the teacher on the floor of the schoolroom. There it was, plain as day, and many of the elders had viewed it before the committee went to call on Joseph to demand that something be done to suppress the lawlessness of his eldest son. And though this was not the first time complaints had come to Joseph and Mary about the doings of their versatile and aggressive child, this was the most serious of all the accusations which had thus far been lodged against him. Jesus listened to the indictment of his artistic efforts for some time, being seated on a large stone just outside the back door. He resented their blaming his father for his alleged misdeeds; so in he marched, fearlessly confronting his accusers. The elders were thrown into confusion. Some were inclined to view the episode humorously, while one or two seemed to think the boy was sacrilegious if not blasphemous. Joseph was nonplussed, Mary indignant, but Jesus insisted on being heard. He had his say, courageously defended his viewpoint, and with consummate self\hyp{}control announced that he would abide by the decision of his father in this as in all other matters controversial. And the committee of elders departed in silence.
 \vs p124 1:5 Mary endeavoured to influence Joseph to permit Jesus to model in clay at home, provided he promised not to carry on any of these questionable activities at school, but Joseph felt impelled to rule that the rabbinical interpretation of the second commandment should prevail. And so Jesus no more drew or modelled the likeness of anything from that day as long as he lived in his father’s house. But he was unconvinced of the wrong of what he had done, and to give up such a favourite pastime constituted one of the great trials of his young life.
 \vs p124 1:6 \pc In the latter part of June, Jesus, in company with his father, first climbed to the summit of Mount Tabor. It was a clear day and the view was superb. It seemed to this nine\hyp{}year\hyp{}old lad that he had really gazed upon the entire world excepting India, Africa, and Rome.
