--- a/tex/p130.tex
+++ b/tex/p130.tex
@@ -21,7 +21,7 @@
 \vs p130 2:4 \pc One of the young men who worked with Jesus one day on the steering paddle became much interested in the words which he dropped from hour to hour as they toiled in the shipyard. When Jesus intimated that the Father in heaven was interested in the welfare of his children on earth, this young Greek, Anaxand, said: “If the Gods are interested in me, then why do they not remove the cruel and unjust foreman of this workshop?” He was startled when Jesus replied, \textcolour{ubdarkred}{“Since you know the ways of kindness and value justice, perhaps the Gods have brought this erring man near that you may lead him into this better way. Maybe you are the salt which is to make this brother more agreeable to all other men; that is, if you have not lost your savour. As it is, this man is your master in that his evil ways unfavourably influence you. Why not assert your mastery of evil by virtue of the power of goodness and thus become the master of all relations between the two of you? I predict that the good in you could overcome the evil in him if you gave it a fair and living chance. There is no adventure in the course of mortal existence more enthralling than to enjoy the exhilaration of becoming the material life partner with spiritual energy and divine truth in one of their triumphant struggles with error and evil. It is a marvellous and transforming experience to become the living channel of spiritual light to the mortal who sits in spiritual darkness. If you are more blessed with truth than is this man, his need should challenge you. Surely you are not the coward who could stand by on the seashore and watch a fellow man who could not swim perish! How much more of value is this man’s soul floundering in darkness compared to his body drowning in water!”}
 \vs p130 2:5 Anaxand was mightily moved by Jesus’ words. Presently he told his superior what Jesus had said, and that night they both sought Jesus’ advice as to the welfare of their souls. And later on, after the Christian message had been proclaimed in Caesarea, both of these men, one a Greek and the other a Roman, believed Philip’s preaching and became prominent members of the church which he founded. Later this young Greek was appointed the steward of a Roman centurion, Cornelius, who became a believer through Peter’s ministry. Anaxand continued to minister light to those who sat in darkness until the days of Paul’s imprisonment at Caesarea, when he perished, by accident, in the great slaughter of 20,000 Jews while he ministered to the suffering and dying.
 \vs p130 2:6 \pc Ganid was, by this time, beginning to learn how his tutor spent his leisure in this unusual personal ministry to his fellow men, and the young Indian set about to find out the motive for these incessant activities. He asked, “Why do you occupy yourself so continuously with these visits with strangers?” And Jesus answered: \textcolour{ubdarkred}{“Ganid, no man is a stranger to one who knows God. In the experience of finding the Father in heaven you discover that all men are your brothers, and does it seem strange that one should enjoy the exhilaration of meeting a newly discovered brother? To become acquainted with one’s brothers and sisters, to know their problems and to learn to love them, is the supreme experience of living.”}
-\vs p130 2:7 This was a conference which lasted well into the night, in the course of which the young man requested Jesus to tell him the difference between the will of God and that human mind act of choosing which is also called will. In substance Jesus said: The will of God is the way of God, partnership with the choice of God in the face of any potential alternative. To do the will of God, therefore, is the progressive experience of becoming more and more like God, and God is the source and destiny of all that is good and beautiful and true. The will of man is the way of man, the sum and substance of that which the mortal chooses to be and do. Will is the deliberate choice of a self\hyp{}conscious being which leads to decision\hyp{}conduct based on intelligent reflection.
+\vs p130 2:7 This was a conference which lasted well into the night, in the course of which the young man requested Jesus to tell him the difference between the will of God and that human mind act of choosing which is also called will. In substance Jesus said: The will of God is the way of God, partnership with the choice of God in the face of any potential alternative. To do the will of God, therefore, is the progressive experience of becoming more and more like God, and God is the source and destiny of all that is good and beautiful and true. The will of man is the way of man, the sum and substance of that which the mortal chooses to be and do. Will is the deliberate choice of a self\hyp{}conscious being which leads to decision\hyp{}conduct based on intelligent reflection.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Shepherd-Dog.jpg}\caption{Playing with the Shepherd Dog by Slawa~Radziszewska}\end{figure}}
 \vs p130 2:8 That afternoon Jesus and Ganid had both enjoyed playing with a very intelligent shepherd dog, and Ganid wanted to know whether the dog had a soul, whether it had a will, and in response to his questions Jesus said: \textcolour{ubdarkred}{“The dog has a mind which can know material man, his master, but cannot know God, who is spirit; therefore the dog does not possess a spiritual nature and cannot enjoy a spiritual experience. The dog may have a will derived from nature and augmented by training, but such a power of mind is not a spiritual force, neither is it comparable to the human will, inasmuch as it is not \bibemph{reflective ---} it is not the result of discriminating higher and moral meanings or choosing spiritual and eternal values. It is the possession of such powers of spiritual discrimination and truth choosing that makes mortal man a moral being, a creature endowed with the attributes of spiritual responsibility and the potential of eternal survival.”} Jesus went on to explain that it is the absence of such mental powers in the animal which makes it forever impossible for the animal world to develop language in time or to experience anything equivalent to personality survival in eternity. As a result of this day’s instruction Ganid never again entertained belief in the transmigration of the souls of men into the bodies of animals.
 \vs p130 2:9 \pc The next day Ganid talked all this over with his father, and it was in answer to Gonod’s question that Jesus explained that \textcolour{ubdarkred}{“human wills which are fully occupied with passing only upon temporal decisions having to do with the material problems of animal existence are doomed to perish in time. Those who make wholehearted moral decisions and unqualified spiritual choices are thus progressively identified with the indwelling and divine spirit, and thereby are they increasingly transformed into the values of eternal survival --- unending progression of divine service.”}
 \vs p130 2:10 \pc It was on this same day that we first heard that momentous truth which, stated in modern terms, would signify: “Will is that manifestation of the human mind which enables the subjective consciousness to express itself objectively and to experience the phenomenon of aspiring to be Godlike.” And it is in this same sense that every reflective and spiritually minded human being can become \bibemph{creative.}
