--- a/tex/p133.tex
+++ b/tex/p133.tex
@@ -84,7 +84,7 @@
 \vs p133 8:3 \pc Ganid had a very interesting experience in Antioch. This young man had proved himself an apt pupil and already had begun to make practical use of some of Jesus’ teachings. There was a certain Indian connected with his father’s business in Antioch who had become so unpleasant and disgruntled that his dismissal had been considered. When Ganid heard this, he betook himself to his father’s place of business and held a long conference with his fellow countryman. This man felt he had been put at the wrong job. Ganid told him about the Father in heaven and in many ways expanded his views of religion. But of all that Ganid said, the quotation of a Hebrew proverb did the most good, and that word of wisdom was: “Whatsoever your hand finds to do, do that with all your might.”
 \vs p133 8:4 After preparing their luggage for the camel caravan, they passed on down to Sidon and thence over to Damascus, and after three days they made ready for the long trek across the desert sands.
 \usection{9.\bibnobreakspace In Mesopotamia}
-\vs p133 9:1 The caravan trip across the desert was not a new experience for these much\hyp{}travelled men. After Ganid had watched his teacher help with the loading of their 20 camels and observed him volunteer to drive their own animal, he exclaimed, “Teacher, is there anything that you cannot do?” Jesus only smiled, saying, \textcolour{ubdarkred}{“The teacher surely is not without honour in the eyes of a diligent pupil.”} And so they set forth for the ancient city of Ur.
+\vs p133 9:1 The caravan trip across the desert was not a new experience for these much\hyp{}travelled men. After Ganid had watched his teacher help with the loading of their 20 camels and observed him volunteer to drive their own animal, he exclaimed, “Teacher, is there anything that you cannot do?” Jesus only smiled, saying, \textcolour{ubdarkred}{“The teacher surely is not without honour in the eyes of a diligent pupil.”} And so they set forth for the ancient city of Ur.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Desert-Trek.jpg}\caption{Trek Across the Desert Sands by Slawa~Radziszewska}\end{figure}}
 \vs p133 9:2 Jesus was much interested in the early history of Ur, the birthplace of Abraham, and he was equally fascinated with the ruins and traditions of Susa, so much so that Gonod and Ganid extended their stay in these parts three weeks in order to afford Jesus more time to conduct his investigations and also to provide the better opportunity to persuade him to go back to India with them.
 \vs p133 9:3 It was at Ur that Ganid had a long talk with Jesus regarding the difference between knowledge, wisdom, and truth. And he was greatly charmed with the saying of the Hebrew wise man: \textcolour{ubdarkred}{“Wisdom is the principal thing; therefore get wisdom. With all your quest for knowledge, get understanding. Exalt wisdom and she will promote you. She will bring you to honour if you will but embrace her.”}
 \vs p133 9:4 \pc At last the day came for the separation. They were all brave, especially the lad, but it was a trying ordeal. They were tearful of eye but courageous of heart. In bidding his teacher farewell, Ganid said: “Farewell, Teacher, but not forever. When I come again to Damascus, I will look for you. I love you, for I think the Father in heaven must be something like you; at least I know you are much like what you have told me about him. I will remember your teaching, but most of all, I will never forget you.” Said the father, “Farewell to a great teacher, one who has made us better and helped us to know God.” And Jesus replied, \textcolour{ubdarkred}{“Peace be upon you, and may the blessing of the Father in heaven ever abide with you.”} And Jesus stood on the shore and watched as the small boat carried them out to their anchored ship. Thus the Master left his friends from India at Charax, never to see them again in this world; nor were they, in this world, ever to know that the man who later appeared as Jesus of Nazareth was this same friend they had just taken leave of --- Joshua their teacher.
