--- a/tex/p135.tex
+++ b/tex/p135.tex
@@ -51,7 +51,7 @@
 \vs p135 7:3 In response to the questions of his disciples John continued to expand his teachings, from day to day adding more that was helpful and comforting compared with his early and cryptic message: “Repent and be baptized.” By this time throngs were arriving from Galilee and the Decapolis. Scores of earnest believers lingered with their adored teacher day after day.
 \usection{8.\bibnobreakspace Meeting of Jesus and John}
 \vs p135 8:1 By December of A.D.\,25, when John reached the neighbourhood of Pella in his journey up the Jordan, his fame had extended throughout all Palestine, and his work had become the chief topic of conversation in all the towns about the lake of Galilee. Jesus had spoken favourably of John’s message, and this had caused many from Capernaum to join John’s cult of repentance and baptism. James and John the fishermen sons of Zebedee had gone down in December, soon after John took up his preaching position near Pella, and had offered themselves for baptism. They went to see John once a week and brought back to Jesus fresh, firsthand reports of the evangelist’s work.
-\vs p135 8:2 Jesus’ brothers James and Jude had talked about going down to John for baptism; and now that Jude had come over to Capernaum for the Sabbath services, both he and James, after listening to Jesus’ discourse in the synagogue, decided to take counsel with him concerning their plans. This was on Saturday night, January 12, A.D.\,26. Jesus requested that they postpone the discussion until the following day, when he would give them his answer. He slept very little that night, being in close communion with the Father in heaven. He had arranged to have noontime lunch with his brothers and to advise them concerning baptism by John. That Sunday morning Jesus was working as usual in the boatshop. James and Jude had arrived with the lunch and were waiting in the lumber room for him, as it was not yet time for the midday recess, and they knew that Jesus was very regular about such matters.
+\vs p135 8:2 Jesus’ brothers James and Jude had talked about going down to John for baptism; and now that Jude had come over to Capernaum for the Sabbath services, both he and James, after listening to Jesus’ discourse in the synagogue, decided to take counsel with him concerning their plans. This was on Saturday night, January 12, A.D.\,26. Jesus requested that they postpone the discussion until the following day, when he would give them his answer. He slept very little that night, being in close communion with the Father in heaven. He had arranged to have noontime lunch with his brothers and to advise them concerning baptism by John. That Sunday morning Jesus was working as usual in the boatshop. James and Jude had arrived with the lunch and were waiting in the lumber room for him, as it was not yet time for the midday recess, and they knew that Jesus was very regular about such matters.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/My-Hour-Has-Come.jpg}\caption{My hour has come by Russ~Docken}\end{figure}}
 \vs p135 8:3 Just before the noon rest, Jesus laid down his tools, removed his work apron, and merely announced to the three workmen in the room with him, \textcolour{ubdarkred}{“My hour has come.”} He went out to his brothers James and Jude, repeating, \textcolour{ubdarkred}{“My hour has come --- let us go to John.”} And they started immediately for Pella, eating their lunch as they journeyed. This was on Sunday, January 13. They tarried for the night in the Jordan valley and arrived on the scene of John’s baptizing about noon of the next day.
 \vs p135 8:4 \pc John had just begun baptizing the candidates for the day. Scores of repentants were standing in line awaiting their turn when Jesus and his two brothers took up their positions in this line of earnest men and women who had become believers in John’s preaching of the coming kingdom. John had been inquiring about Jesus of Zebedee’s sons. He had heard of Jesus’ remarks concerning his preaching, and he was day by day expecting to see him arrive on the scene, but he had not expected to greet him in the line of baptismal candidates.
 \vs p135 8:5 Being engrossed with the details of rapidly baptizing such a large number of converts, John did not look up to see Jesus until the Son of Man stood in his immediate presence. When John recognized Jesus, the ceremonies were halted for a moment while he greeted his cousin in the flesh and asked, “But why do you come down into the water to greet me?” And Jesus answered, \textcolour{ubdarkred}{“To be subject to your baptism.”} John replied: “But I have need to be baptized by you. Why do you come to me?” And Jesus whispered to John: \textcolour{ubdarkred}{“Bear with me now, for it becomes us to set this example for my brothers standing here with me, and that the people may know that my hour has come.”}
