--- a/tex/p136.tex
+++ b/tex/p136.tex
@@ -27,7 +27,7 @@
 \vs p136 3:6 When the Most High Father of Edentia had taken leave, Jesus held long converse with Gabriel regarding the welfare of the universe and, sending greetings to Immanuel, proffered his assurance that, in the work which he was about to undertake on Urantia, he would be ever mindful of the counsel he had received in connection with the prebestowal charge administered on Salvington.
 \vs p136 3:7 \pc Throughout all of these 40 days of isolation James and John the sons of Zebedee were engaged in searching for Jesus. Many times they were not far from his abiding place, but never did they find him.
 \usection{4.\bibnobreakspace Plans for Public Work}
-\vs p136 4:1 Day by day, up in the hills, Jesus formulated the plans for the remainder of his Urantia bestowal. He first decided not to teach contemporaneously with John. He planned to remain in comparative retirement until the work of John achieved its purpose, or until John was suddenly stopped by imprisonment. Jesus well knew that John’s fearless and tactless preaching would presently arouse the fears and enmity of the civil rulers. In view of John’s precarious situation, Jesus began definitely to plan his program of public labours in behalf of his people and the world, in behalf of every inhabited world throughout his vast universe. Michael’s mortal bestowal was \bibemph{on} Urantia but \bibemph{for} all worlds of Nebadon.
+\vs p136 4:1 Day by day, up in the hills, Jesus formulated the plans for the remainder of his Urantia bestowal. He first decided not to teach contemporaneously with John. He planned to remain in comparative retirement until the work of John achieved its purpose, or until John was suddenly stopped by imprisonment. Jesus well knew that John’s fearless and tactless preaching would presently arouse the fears and enmity of the civil rulers. In view of John’s precarious situation, Jesus began definitely to plan his program of public labours in behalf of his people and the world, in behalf of every inhabited world throughout his vast universe. Michael’s mortal bestowal was \bibemph{on} Urantia but \bibemph{for} all worlds of Nebadon.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/No-Writing.png}\caption{Leave no Writing by Russ~Docken}\end{figure}}
 \vs p136 4:2 The first thing Jesus did, after thinking through the general plan of co\hyp{}ordinating his program with John’s movement, was to review in his mind the instructions of Immanuel. Carefully he thought over the advice given him concerning his methods of labour, and that he was to leave no permanent writing on the planet. Never again did Jesus write on anything except sand. On his next visit to Nazareth, much to the sorrow of his brother Joseph, Jesus destroyed all of his writing that was preserved on the boards about the carpenter shop, and which hung upon the walls of the old home. And Jesus pondered well over Immanuel’s advice pertaining to his economic, social, and political attitude toward the world as he should find it.
 \vs p136 4:3 \pc Jesus did not fast during this 40 days’ isolation. The longest period he went without food was his first two days in the hills when he was so engrossed with his thinking that he forgot all about eating. But on the third day he went in search of food. Neither was he \bibemph{tempted} during this time by any evil spirits or rebel personalities of station on this world or from any other world.
 \vs p136 4:4 \pc These 40 days were the occasion of the final conference between the human and the divine minds, or rather the first real functioning of these two minds as now made one. The results of this momentous season of meditation demonstrated conclusively that the divine mind has triumphantly and spiritually dominated the human intellect. The mind of man has become the mind of God from this time on, and though the selfhood of the mind of man is ever present, always does this spiritualized human mind say, \textcolour{ubdarkred}{“Not my will but yours be done.”}
