--- a/tex/p145.tex
+++ b/tex/p145.tex
@@ -33,7 +33,7 @@
 \vs p145 3:5 \pc Soon after the setting of the sun, as Jesus and the apostles still lingered about the supper table, Peter’s wife heard voices in the front yard and, on going to the door, saw a large company of sick folks assembling, and that the road from Capernaum was crowded by those who were on their way to seek healing at Jesus’ hands. On seeing this sight, she went at once and informed her husband, who told Jesus.
 \vs p145 3:6 When the Master stepped out of the front entrance of Zebedee’s house, his eyes met an array of stricken and afflicted humanity. He gazed upon almost 1,000 sick and ailing human beings; at least that was the number of persons gathered together before him. Not all present were afflicted; some had come assisting their loved ones in this effort to secure healing.
 \vs p145 3:7 The sight of these afflicted mortals, men, women, and children, suffering in large measure as a result of the mistakes and misdeeds of his own trusted Sons of universe administration, peculiarly touched the human heart of Jesus and challenged the divine mercy of this benevolent Creator Son. But Jesus well knew he could never build an enduring spiritual movement upon the foundation of purely material wonders. It had been his consistent policy to refrain from exhibiting his creator prerogatives. Not since Cana had the supernatural or miraculous attended his teaching; still, this afflicted multitude touched his sympathetic heart and mightily appealed to his understanding affection.
-\vs p145 3:8 A voice from the front yard exclaimed: “Master, speak the word, restore our health, heal our diseases, and save our souls.” No sooner had these words been uttered than a vast retinue of seraphim, physical controllers, Life Carriers, and midwayers, such as always attended this incarnated Creator of a universe, made themselves ready to act with creative power should their Sovereign give the signal. This was one of those moments in the earth career of Jesus in which divine wisdom and human compassion were so interlocked in the judgment of the Son of Man that he sought refuge in appeal to his Father’s will.
+\vs p145 3:8 A voice from the front yard exclaimed: “Master, speak the word, restore our health, heal our diseases, and save our souls.” No sooner had these words been uttered than a vast retinue of seraphim, physical controllers, Life Carriers, and midwayers, such as always attended this incarnated Creator of a universe, made themselves ready to act with creative power should their Sovereign give the signal. This was one of those moments in the earth career of Jesus in which divine wisdom and human compassion were so interlocked in the judgment of the Son of Man that he sought refuge in appeal to his Father’s will.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Sundown-Healing.jpg}\caption{The Healing at Sundown by J.~Kirk~Richards}\end{figure}}
 \vs p145 3:9 When Peter implored the Master to heed their cry for help, Jesus, looking down upon the afflicted throng, answered: \textcolour{ubdarkred}{“I have come into the world to reveal the Father and establish his kingdom. For this purpose have I lived my life to this hour. If, therefore, it should be the will of Him who sent me and not inconsistent with my dedication to the proclamation of the gospel of the kingdom of heaven, I would desire to see my children made whole --- and --- ”} but the further words of Jesus were lost in the tumult.
 \vs p145 3:10 Jesus had passed the responsibility of this healing decision to the ruling of his Father. Evidently the Father’s will interposed no objection, for the words of the Master had scarcely been uttered when the assembly of celestial personalities serving under the command of Jesus’ Personalized Thought Adjuster was mightily astir. The vast retinue descended into the midst of this motley throng of afflicted mortals, and in a moment of time 683 men, women, and children were made whole, were perfectly healed of all their physical diseases and other material disorders. Such a scene was never witnessed on earth before that day, nor since. And for those of us who were present to behold this creative wave of healing, it was indeed a thrilling spectacle.
 \vs p145 3:11 \pc But of all the beings who were astonished at this sudden and unexpected outbreak of supernatural healing, Jesus was the most surprised. In a moment when his human interests and sympathies were focused upon the scene of suffering and affliction there spread out before him, he neglected to bear in his human mind the admonitory warnings of his Personalized Adjuster regarding the impossibility of limiting the time element of the creator prerogatives of a Creator Son under certain conditions and in certain circumstances. Jesus desired to see these suffering mortals made whole if his Father’s will would not thereby be violated. The Personalized Adjuster of Jesus instantly ruled that such an act of creative energy at that time would not transgress the will of the Paradise Father, and by such a decision --- in view of Jesus’ preceding expression of healing desire --- the creative act \bibemph{was.} What a \bibemph{Creator Son} desires and his Father \bibemph{wills} IS. Not in all of Jesus’ subsequent earth life did another such en masse physical healing of mortals take place.
