--- a/tex/p150.tex
+++ b/tex/p150.tex
@@ -6,7 +6,7 @@
 \vs p150 0:4 The evangelists were sent out in groups of five, while Jesus and the 12 travelled together most of the time, the apostles going out two and two to baptize believers as occasion required. For a period of almost three weeks Abner and his associates also worked with the evangelistic groups, advising them and baptizing believers. They visited Magdala, Tiberias, Nazareth, and all the principal cities and villages of central and southern Galilee, all the places previously visited and many others. This was their last message to Galilee, except to the northern portions.
 \usection{1.\bibnobreakspace The Women’s Evangelistic Corps}
 \vs p150 1:1 Of all the daring things which Jesus did in connection with his earth career, the most amazing was his sudden announcement on the evening of January 16: \textcolour{ubdarkred}{“On the morrow we will set apart ten women for the ministering work of the kingdom.”} At the beginning of the two weeks’ period during which the apostles and the evangelists were to be absent from Bethsaida on their furlough, Jesus requested David to summon his parents back to their home and to dispatch messengers calling to Bethsaida ten devout women who had served in the administration of the former encampment and the tented infirmary. These women had all listened to the instruction given the young evangelists, but it had never occurred to either themselves or their teachers that Jesus would dare to commission women to teach the gospel of the kingdom and minister to the sick. These ten women selected and commissioned by Jesus were: Susanna, the daughter of the former chazan of the Nazareth synagogue; Joanna, the wife of Chuza, the steward of Herod Antipas; Elizabeth, the daughter of a wealthy Jew of Tiberias and Sepphoris; Martha, the elder sister of Andrew and Peter; Rachel, the sister\hyp{}in\hyp{}law of Jude, the Master’s brother in the flesh; Nasanta, the daughter of Elman, the Syrian physician; Milcha, a cousin of the Apostle Thomas; Ruth, the eldest daughter of Matthew Levi; Celta, the daughter of a Roman centurion; and Agaman, a widow of Damascus. Subsequently, Jesus added two other women to this group --- Mary Magdalene and Rebecca, the daughter of Joseph of Arimathea.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Womens.jpg}\caption{Gathering the Women's Corps by Del~Parson}\end{figure}}
-\vs p150 1:2 Jesus authorized these women to effect their own organization and directed Judas to provide funds for their equipment and for pack animals. The ten elected Susanna as their chief and Joanna as their treasurer. From this time on they furnished their own funds; never again did they draw upon Judas for support.
+\vs p150 1:2 Jesus authorized these women to effect their own organization and directed Judas to provide funds for their equipment and for pack animals. The ten elected Susanna as their chief and Joanna as their treasurer. From this time on they furnished their own funds; never again did they draw upon Judas for support.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Womens-Corps.png}\caption{Commissioning the Women's Corps by J. Kirk Richards}\end{figure}}
 \vs p150 1:3 It was most astounding in that day, when women were not even allowed on the main floor of the synagogue (being confined to the women’s gallery), to behold them being recognized as authorized teachers of the new gospel of the kingdom. The charge which Jesus gave these ten women as he set them apart for gospel teaching and ministry was the emancipation proclamation which set free all women and for all time; no more was man to look upon woman as his spiritual inferior. This was a decided shock to even the 12 apostles. Notwithstanding they had many times heard the Master say that \textcolour{ubdarkred}{“in the kingdom of heaven there is neither rich nor poor, free nor bond, male nor female, all are equally the sons and daughters of God,”} they were literally stunned when he proposed formally to commission these ten women as religious teachers and even to permit their travelling about with them. The whole country was stirred up by this proceeding, the enemies of Jesus making great capital out of this move, but everywhere the women believers in the good news stood staunchly behind their chosen sisters and voiced no uncertain approval of this tardy acknowledgement of woman’s place in religious work. And this liberation of women, giving them due recognition, was practised by the apostles immediately after the Master’s departure, albeit they fell back to the olden customs in subsequent generations. Throughout the early days of the Christian church women teachers and ministers were called \bibemph{deaconesses} and were accorded general recognition. But Paul, despite the fact that he conceded all this in theory, never really incorporated it into his own attitude and personally found it difficult to carry out in practice.
 \usection{2.\bibnobreakspace The Stop at Magdala}
 \vs p150 2:1 As the apostolic party journeyed from Bethsaida, the women travelled in the rear. During the conference time they always sat in a group in front and to the right of the speaker. Increasingly, women had become believers in the gospel of the kingdom, and it had been a source of much difficulty and no end of embarrassment when they had desired to hold personal converse with Jesus or one of the apostles. Now all this was changed. When any of the women believers desired to see the Master or confer with the apostles, they went to Susanna, and in company with one of the 12 women evangelists, they would go at once into the presence of the Master or one of his apostles.
