--- a/tex/p182.tex
+++ b/tex/p182.tex
@@ -48,7 +48,7 @@
 \vs p182 3:2 The Master remained in a prayerful attitude for a few moments, and then, going over to the three apostles, he found them sound asleep, for their eyes were heavy and they could not remain awake. As Jesus awoke them, he said: \textcolour{ubdarkred}{“What! can you not watch with me even for one hour? Cannot you see that my soul is exceedingly sorrowful, even to death, and that I crave your companionship?”} After the three had aroused from their slumber, the Master again went apart by himself and, falling down on the ground, again prayed: \textcolour{ubdarkred}{“Father, I know it is possible to avoid this cup --- all things are possible with you --- but I have come to do your will, and while this is a bitter cup, I would drink it if it is your will.”} And when he had thus prayed, a mighty angel came down by his side and, speaking to him, touched him and strengthened him.
 \vs p182 3:3 When Jesus returned to speak with the three apostles, he again found them fast asleep. He awakened them, saying: \textcolour{ubdarkred}{“In such an hour I need that you should watch and pray with me --- all the more do you need to pray that you enter not into temptation --- wherefore do you fall asleep when I leave you?”}
 \vs p182 3:4 And then, for a third time, the Master withdrew and prayed: \textcolour{ubdarkred}{“Father, you see my sleeping apostles; have mercy upon them. The spirit is indeed willing, but the flesh is weak. And now, O Father, if this cup may not pass, then would I drink it. Not my will, but yours, be done.”} And when he had finished praying, he lay for a moment prostrate on the ground. When he arose and went back to his apostles, once more he found them asleep. He surveyed them and, with a pitying gesture, tenderly said: \textcolour{ubdarkred}{“Sleep on now and take your rest; the time of decision is past. The hour is now upon us wherein the Son of Man will be betrayed into the hands of his enemies.”} As he reached down to shake them that he might awaken them, he said: \textcolour{ubdarkred}{“Arise, let us be going back to the camp, for, behold, he who betrays me is at hand, and the hour has come when my flock shall be scattered. But I have already told you about these things.”}
-\vs p182 3:5 \pc During the years that Jesus lived among his followers, they did, indeed, have much proof of his divine nature, but just now are they about to witness new evidences of his humanity. Just before the greatest of all the revelations of his divinity, his resurrection, must now come the greatest proofs of his mortal nature, his humiliation and crucifixion.
+\vs p182 3:5 \pc During the years that Jesus lived among his followers, they did, indeed, have much proof of his divine nature, but just now are they about to witness new evidences of his humanity. Just before the greatest of all the revelations of his divinity, his resurrection, must now come the greatest proofs of his mortal nature, his humiliation and crucifixion.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Gethsemane-Prayer.png}\caption{Gethsemane Prayer by Yongsung~Kim}\end{figure}}
 \vs p182 3:6 Each time he prayed in the garden, his humanity laid a firmer faith\hyp{}hold upon his divinity; his human will more completely became one with the divine will of his Father. Among other words spoken to him by the mighty angel was the message that the Father desired his Son to finish his earth bestowal by passing through the creature experience of death just as all mortal creatures must experience material dissolution in passing from the existence of time into the progression of eternity.
 \vs p182 3:7 Earlier in the evening it had not seemed so difficult to drink the cup, but as the human Jesus bade farewell to his apostles and sent them to their rest, the trial grew more appalling. Jesus experienced that natural ebb and flow of feeling which is common to all human experience, and just now he was weary from work, exhausted from the long hours of strenuous labour and painful anxiety concerning the safety of his apostles. While no mortal can presume to understand the thoughts and feelings of the incarnate Son of God at such a time as this, we know that he endured great anguish and suffered untold sorrow, for the perspiration rolled off his face in great drops. He was at last convinced that the Father intended to allow natural events to take their course; he was fully determined to employ none of his sovereign power as the supreme head of a universe to save himself.
 \vs p182 3:8 The assembled hosts of a vast creation are now hovered over this scene under the transient joint command of Gabriel and the Personalized Adjuster of Jesus. The division commanders of these armies of heaven have repeatedly been warned not to interfere with these transactions on earth unless Jesus himself should order them to intervene.
