--- a/tex/p126.tex
+++ b/tex/p126.tex
@@ -56,7 +56,7 @@
 \vs p126 5:7 \pc The great shock of his 15\ts{th} year came when Jesus went over to Sepphoris to receive the decision of Herod regarding the appeal taken to him in the dispute about the amount of money due Joseph at the time of his accidental death. Jesus and Mary had hoped for the receipt of a considerable sum of money when the treasurer at Sepphoris had offered them a paltry amount. Joseph’s brothers had taken an appeal to Herod himself, and now Jesus stood in the palace and heard Herod decree that his father had nothing due him at the time of his death. And for such an unjust decision Jesus never again trusted Herod Antipas. It is not surprising that he once alluded to Herod as \textcolour{ubdarkred}{“that fox.”}
 \vs p126 5:8 The close work at the carpenter’s bench during this and subsequent years deprived Jesus of the opportunity of mingling with the caravan passengers. The family supply shop had already been taken over by his uncle, and Jesus worked altogether in the home shop, where he was near to help Mary with the family. About this time he began sending James up to the camel lot to gather information about world events, and thus he sought to keep in touch with the news of the day.
 \vs p126 5:9 As he grew up to manhood, he passed through all those conflicts and confusions which the average young persons of previous and subsequent ages have undergone. And the rigorous experience of supporting his family was a sure safeguard against his having overmuch time for idle meditation or the indulgence of mystic tendencies.
-\vs p126 5:10 \pc This was the year that Jesus rented a considerable piece of land just to the north of their home, which was divided up as a family garden plot. Each of the older children had an individual garden, and they entered into keen competition in their agricultural efforts. Their eldest brother spent some time with them in the garden each day during the season of vegetable cultivation. As Jesus worked with his younger brothers and sisters in the garden, he many times entertained the wish that they were all located on a farm out in the country where they could enjoy the liberty and freedom of an unhampered life. But they did not find themselves growing up in the country; and Jesus, being a thoroughly practical youth as well as an idealist, intelligently and vigorously attacked his problem just as he found it, and did everything within his power to adjust himself and his family to the realities of their situation and to adapt their condition to the highest possible satisfaction of their individual and collective longings.
+\vs p126 5:10 \pc This was the year that Jesus rented a considerable piece of land just to the north of their home, which was divided up as a family garden plot. Each of the older children had an individual garden, and they entered into keen competition in their agricultural efforts. Their eldest brother spent some time with them in the garden each day during the season of vegetable cultivation. As Jesus worked with his younger brothers and sisters in the garden, he many times entertained the wish that they were all located on a farm out in the country where they could enjoy the liberty and freedom of an unhampered life. But they did not find themselves growing up in the country; and Jesus, being a thoroughly practical youth as well as an idealist, intelligently and vigorously attacked his problem just as he found it, and did everything within his power to adjust himself and his family to the realities of their situation and to adapt their condition to the highest possible satisfaction of their individual and collective longings.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Family-Garden.png}\caption{The Family Garden by Michael~Malm}\end{figure}}
 \vs p126 5:11 At one time Jesus faintly hoped that he might be able to gather up sufficient means, provided they could collect the considerable sum of money due his father for work on Herod’s palace, to warrant undertaking the purchase of a small farm. He had really given serious thought to this plan of moving his family out into the country. But when Herod refused to pay them any of the funds due Joseph, they gave up the ambition of owning a home in the country. As it was, they contrived to enjoy much of the experience of farm life as they now had three cows, four sheep, a flock of chickens, a donkey, and a dog, in addition to the doves. Even the little tots had their regular duties to perform in the well\hyp{}regulated scheme of management which characterized the home life of this Nazareth family.
 \vs p126 5:12 \pc With the close of this 15\ts{th} year Jesus completed the traversal of that dangerous and difficult period in human existence, that time of transition between the more complacent years of childhood and the consciousness of approaching manhood with its increased responsibilities and opportunities for the acquirement of advanced experience in the development of a noble character. The growth period for mind and body had ended, and now began the real career of this young man of Nazareth.
 \quizlink
